--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,6 @@
 		<title>Moteltech</title>
 	</head>
 	<body>
-		<p><italic>If you are seeing this message, the website is working.</italic></p>
+		<p><italic>KKKKKKKKKKKKKKKKKKKKKKKKKKKK</italic></p>
 	</body>
 </html>
