Adds suite management page and removes scripts

--- a/frontend/public/suite.html
+++ b/frontend/public/suite.html
@@ -92,6 +92,6 @@
             </section>
         </div>
     </main>
-    <script src="assets/scripts/call-handler.js"></script>
+    <!---<script src="assets/scripts/call-handler.js"></script>---->
 </body>
 </html>
