--- a/frontend/public/suite.html
+++ b/frontend/public/suite.html
@@ -14,6 +14,8 @@
     <title>Suíte</title>
 </head>
 <body>
+    <audio id="localAudio" autoplay></audio>
+    <audio id="remoteAudio" autoplay></audio>
     <aside class="sidebar flex-column-center">
         <nav class="sidebar__nav flex-column-center">
             <a class="icon icon--home" href="#home">
@@ -40,7 +42,7 @@
                 <p class="container-profile--subtitle">Suíte</p>
             </section>
 
-            <section class=" container-telephony" id="telephony">
+            <section class="container-telephony" id="telephony">
                 <div class="flex-container--title"><h3>Telefonia</h3></div>
                 <div class="container-shortcut">
                     <div class="container-shortcut-box container-shortcut-box--telephony">
@@ -92,6 +94,12 @@
             </section>
         </div>
     </main>
-    <script src="assets/scripts/call-handler.js"></script>
+
+    <div class="modal modal__call" id="modalteste">
+        <p class="modal__call--status">Chamando</p>
+        <button>Desligar</button>
+    </div>
+    <script type="module" src="assets/scripts/websocket-connection.js"></script>
+    <script type="module" src="assets/scripts/event-listener-suite.js"></script>
 </body>
 </html>
