Update hardcoded IP addresses and scripts path

--- a/frontend/public/reception.html
+++ b/frontend/public/reception.html
@@ -166,7 +166,7 @@
             <button>Desligar</button>
         </div>
     </div>
-    <script type="module" src="../public/assets/scripts/reception.js"></script>
-    <script type="module" src="../public/assets/scripts/antigo.js"></script>
+    <script type="module" src="assets/scripts/reception.js"></script>
+    <script type="module" src="assets/scripts/antigo.js"></script>
 </body>
 </html>
