--- a/frontend/public/suite.html
+++ b/frontend/public/suite.html
@@ -100,7 +100,7 @@
             <button>Desligar</button>
         </div>
     </div>
-    <script type="module" src="../public/assets/scripts/antigo.js"></script>
-    <script type="module" src="../public/assets/scripts/suite.js"></script>
+    <script type="module" src="assets/scripts/antigo.js"></script>
+    <script type="module" src="assets/scripts/suite.js"></script>
 </body>
 </html>
